--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "grpc-browser",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "",
   "main": "src/index.js",
   "browser": "dist/grpc-browser.bundle.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zaucy/grpc-browser.git"
